# kiro_handover_calculation

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
docker/: Docker-Install.md  Dockerfile  run_kiro_hri_calc.bash  setup_hri_calc.sh
docs/: 01_arise_context.md  02_interfaces.md  03_installation.md  04_launch_ros_nodes.md  06_role_in_demonstrator.md
examples/: Gazebo-Simulation.md
include/kiro_handover_calculation/: arm_fk.hpp  body_selector.hpp  image_relay.hpp  optimal_volume_calculator.hpp  volume_clustering.hpp
launch/: kiro_handover_calculation.launch.py
src/: arm_fk.cpp  body_selector.cpp  image_relay.cpp  optimal_volume_calculator.cpp  volume_clustering.cpp
