<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kiro_handover_calculation</name>
  <version>0.0.0</version>
  <description>
    ROS2 Humble node for ergonomically-optimized human-robot handovers. 
    It uses ROS4HRI skeletal tracking to calculate reachable volumes, 
    filtered using REBA/RULA scores to ensure human comfort. 
    Optimized for the Vulcanexus ecosystem, it utilizes FastDDS keyed 
    topics to maintain high performance and low latency.
  </description>
  <maintainer email="nikolas.lappas.2003@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>eigen3</build_depend> -->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>hri_msgs</build_depend>
  <build_depend>kiro_handover_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>lifecycle_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend>eigen3</exec_depend> -->
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>hri_msgs</exec_depend>
  <exec_depend>kiro_handover_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
